--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "postcss": "^8.2.6",
     "prettier": "^2.2.1",
     "tailwindcss": "^2.0.3",
-    "typescript": "^4.1.5"
+    "typescript": "^4.1.5",
+    "webpack": "^5.24.3"
   }
 }
