--- a/package.json
+++ b/package.json
@@ -30,15 +30,20 @@
   "devDependencies": {
     "@babel/core": "^7.12.17",
     "@babel/preset-typescript": "^7.12.17",
+    "@storybook/addon-essentials": "6.1.18",
+    "@storybook/react": "6.1.18",
+    "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@types/classnames": "^2.2.11",
     "@types/get-value": "^3.0.1",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.30",
     "@types/react": "^17.0.2",
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
     "autoprefixer": "^10.2.4",
+
+    "@typescript-eslint/parser": "^4.15.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.20.0",
@@ -47,11 +52,14 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^5.1.1",
+    "jest": "^26.6.3",
+    "jest-styled-components": "^7.0.3",
     "lint-staged": "^10.5.4",
+    "plop": "^2.7.4",
     "postcss": "^8.2.6",
-    "prettier": "^2.2.1",
     "tailwindcss": "^2.0.3",
-    "typescript": "^4.1.5",
-    "webpack": "^5.24.3"
+    "prettier": "^2.2.1",
+    "storybook-addon-next-router": "^2.0.4",
+    "typescript": "^4.1.5"
   }
 }
